Enhance placeholder page and prepare 404

--- a/src/404.html
+++ b/src/404.html
@@ -11,7 +11,10 @@
   <script>
     window.setTimeout(function(){
       location.href = "http://beta.roxee.tv";
-    }, 1000);
+    }, 5000);
+  </script>
+  <script>
+    // location.href = "http://beta.roxee.tv"
   </script>
   <style type="text/css">
       body {
@@ -41,7 +44,7 @@
   </head>
   <body>
   <div class="full-center">
-    <h1>Whatcha doing?</h1>
+    <h1>Errr... this is embarassing</h1>
     <p>
       <a href="http://beta.roxee.tv">Click here to get away...</a>
       <div>
