--- a/src/404.html
+++ b/src/404.html
@@ -13,9 +13,6 @@
       location.href = "http://beta.roxee.tv";
     }, 5000);
   </script>
-  <script>
-    // location.href = "http://beta.roxee.tv"
-  </script>
   <style type="text/css">
       body {
         color: white;
@@ -23,7 +20,7 @@
       }
       
       .full-center {
-        background: url(wiu.png) center center no-repeat;
+        background: url(/wiu.png) center center no-repeat;
         position:absolute;
         top:50%;
         left:50%;
@@ -48,7 +45,7 @@
     <p>
       <a href="http://beta.roxee.tv">Click here to get away...</a>
       <div>
-        <img src="roxee.png" />
+        <img src="/roxee.png" />
       </div>
     </p>
   </div>
