--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       }
       
       .full-center {
-        background: url(wiu.png) center center no-repeat;
+        background: url(/wiu.png) center center no-repeat;
         position:absolute;
         top:50%;
         left:50%;
@@ -45,7 +45,7 @@
     <p>
       <a href="http://beta.roxee.tv">Click here to get away...</a>
       <div>
-        <img src="roxee.png" />
+        <img src="/roxee.png" />
       </div>
     </p>
   </div>
