--- a/src/index.html
+++ b/src/index.html
@@ -2,52 +2,83 @@
 <!--[if lt IE 7]> <html lang="en-us" class="no-js ie6"> <![endif]-->
 <!--[if IE 7]>    <html lang="en-us" class="no-js ie7"> <![endif]-->
 <!--[if IE 8]>    <html lang="en-us" class="no-js ie8"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en-us" class="no-js"> <!--<![endif]-->
+<!--[if IE 9 ]>   <html lang="en-us" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html lang="en-us" class="no-js "> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title dir="ltr">Third-party libraries repository (a.k.a. static)</title>
+  <meta name="description" content="JSBoot static base">
+  <meta name="author" content="Web It Up">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title dir="ltr"></title>
-  <script>
-    window.setTimeout(function(){
-      location.href = "http://beta.roxee.tv";
-    }, 1000);
-  </script>
-  <style type="text/css">
-      body {
-        color: white;
-        background:#2F2F2F;
-      }
-      
-      .full-center {
-        background: url(/wiu.png) center center no-repeat;
-        position:absolute;
-        top:50%;
-        left:50%;
-        width:800px;
-        height:500px;
-        margin-top:-250px;
-        margin-left:-400px;
-        text-align: center;
-      }
-      
-      a{
-        color: white;
-      }
-      img {
+  <link rel="shortcut icon" href="favicon.ico">
 
-      }
-  </style>
-  </head>
-  <body>
-  <div class="full-center">
-    <h1>Whatcha doing?</h1>
-    <p>
-      <a href="http://beta.roxee.tv">Click here to get away...</a>
-      <div>
-        <img src="/roxee.png" />
-      </div>
-    </p>
-  </div>
-  </body>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <!--
+   * @license {PUKE-PACKAGE-LICENSE}.
+   * @copyright {PUKE-PACKAGE-COPYRIGHT}
+   * @version {PUKE-PACKAGE-VERSION}
+   * @author {PUKE-PACKAGE-AUTHOR}
+   * @name {PUKE-PACKAGE-NAME}
+   * @homepage {PUKE-PACKAGE-HOME}
+   * @location {PUKE-PACKAGE-GIT-ROOT}
+   * @file .
+  -->
+
+</head>
+<body id="static">
+  <header>
+    <h1>Third-party libraries repository (a.k.a. static)</h1>
+  </header>
+  <h2>Abstract</h2>
+  <section>
+    The static domain is meant to provide commonly used (third-party) frameworks and js libraries.
+    They usually exist in release forms, and in "trunk" form.
+    Though you can link directly to them, it's recommended you use a jsboot stack instead.
+    Note that some of them are patched, or even forked.
+  </section>
+
+  <h2>Libraries</h2>
+  <article>
+<!--     <a href="index.json">JSON</a>
+    <pre style="whitespace: pre;">
+    {PUKE-LIST}
+    </pre>
+ -->
+    <a href="static.yaml">YAML</a>
+    <pre style="whitespace: pre;">
+    {PUKE-LIST}
+    </pre>
+  </article>
+  <footer>
+  </footer>
+
+<!--
+  <script>
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', '{PUKE-ANAL}']);
+      _gaq.push(['_setDomainName', 'none']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+  </script>
+-->
+
+
+  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+       chromium.org/developers/how-tos/chrome-frame-getting-started -->
+  <!--[if lt IE 7 ]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+  <![endif]-->
+</body>
 </html>
+
