--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title dir="ltr">Third-party libraries repository (a.k.a. static)</title>
+  <title dir="ltr">Third-party libraries manager (a.k.a. airstrip)</title>
   <meta name="description" content="JSBoot static base">
   <meta name="author" content="Web It Up">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,12 +31,12 @@
 </head>
 <body id="static">
   <header>
-    <h1>Third-party libraries repository (a.k.a. static)</h1>
+    <h1>Third-party libraries manager (a.k.a. airstrip)</h1>
   </header>
   <h2>Abstract</h2>
   <section>
-    The static domain is meant to provide commonly used (third-party) frameworks and js libraries.
-    They usually exist in release forms, and in "trunk" form.
+    This domain is meant to provide commonly used (third-party) frameworks and js libraries.
+    They are usually provided in two versions - release and trunk.
     Though you can link directly to them, it's recommended you use a jsboot stack instead.
     Note that some of them are patched, or even forked.
   </section>
@@ -55,23 +55,6 @@
   </article>
   <footer>
   </footer>
-
-<!--
-  <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{PUKE-ANAL}']);
-      _gaq.push(['_setDomainName', 'none']);
-      _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-  </script>
--->
-
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
