Use @location git sugar

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
    * @author {PUKE-PACKAGE-AUTHOR}
    * @name {PUKE-PACKAGE-NAME}
    * @homepage {PUKE-PACKAGE-HOME}
-   * @location {PUKE-PACKAGE-GIT-ROOT}
+   * @location {PUKE-PACKAGE-GIT-ROOT}/index.html{PUKE-PACKAGE-GIT-REV}
    * @file .
   -->
 
