Fix tiny and index

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
   <!-- dean ie7 -->
   <!--[if lt IE 9]>
-  <script src="lib/shims/ie9-2.1b4.js"></script>
+  <script src="lib/shims/ie9-2.1b4-min.js"></script>
   <![endif]-->
 
   <!-- Out stylesheet -->
@@ -25,7 +25,7 @@
   <!-- XXX modernizr interest is more in its tests themselves - predates spitfire 
   Should find a better crossover between the two -->
 
-  <script src="lib/libs/modernizr-2.6.2.js"></script>
+  <script src="lib/libs/modernizr-2.6.2-min.js"></script>
 
   <!--
    * @license {PUKE-PACKAGE-LICENSE}.
@@ -112,7 +112,7 @@
     <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
   <![endif]-->
 
-  <script src="lib/frameworks/jquery-1.8.js"></script>
-  <script src="lib/frameworks/bootstrap-stable.js"></script>
+  <script src="lib/frameworks/jquery-1.8-min.js"></script>
+  <script src="lib/frameworks/bootstrap-jsboot-min.js"></script>
 </body>
 </html>
