--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en-us" class="no-js "> <!--<![endif]-->
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE6">
   <title dir="ltr">Third-party libraries manager (a.k.a. airstrip)</title>
   <meta name="description" content="JSBoot static base">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,27 +15,28 @@
 
   <!-- dean ie7 -->
   <!--[if lt IE 9]>
-  <script src="lib/shims/ie7/ie9-2.1b4-min.js"></script>
+  <script src="lib/shims/ie7/ie9-stable-min.js"></script>
   <![endif]-->
 
   <!-- Out stylesheet -->
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index-min.css">
 
   <!-- Modernizr, to prevent FOUC -->
   <!-- XXX modernizr interest is more in its tests themselves - predates spitfire 
   Should find a better crossover between the two -->
 
-  <script src="lib/libs/modernizr/modernizr-2.6.2-min.js"></script>
+  <script src="lib/libs/modernizr/modernizr-stable-min.js"></script>
 
   <!--
-   * @license {PUKE-PACKAGE-LICENSE}.
-   * @copyright {PUKE-PACKAGE-COPYRIGHT}
+   * @file
+   * @summary Airstrip index page
+   *
+   * @author {PUKE-RIGHTS-AUTHOR}
    * @version {PUKE-PACKAGE-VERSION}
-   * @author {PUKE-PACKAGE-AUTHOR}
-   * @name {PUKE-PACKAGE-NAME}
-   * @homepage {PUKE-PACKAGE-HOME}
-   * @location {PUKE-PACKAGE-GIT-ROOT}/index.html{PUKE-PACKAGE-GIT-REV}
-   * @file .
+   *
+   * @license {PUKE-RIGHTS-LICENSE}.
+   * @copyright {PUKE-RIGHTS-COPYRIGHT}
+   * @name {PUKE-GIT-ROOT}/index.html{PUKE-GIT-REVISION}
   -->
 
 </head>
@@ -79,20 +80,15 @@
 
     <h2>Abstract</h2>
     <section>
-      This domain is meant to provide commonly used (third-party) frameworks and js libraries.
+      This domain host a build result of airstrip, meant to provide commonly used (third-party) frameworks and js libraries.
       They are usually provided in two versions - release and trunk.
-      Though you can link directly to them, it's recommended you use a jsboot stack instead.
-      Note that some of them are patched, or even forked.
+      Though you can link directly to them, it's recommended you use a jsboot stack instead, or deploy airstrip for yourself.
+      Note that some of these libraries are patched, or even forked.
     </section>
 
     <h2>Libraries</h2>
     <article>
-  <!--     <a href="index.json">JSON</a>
-      <pre style="whitespace: pre;">
-      {PUKE-LIST}
-      </pre>
-   -->
-      <a href="static.yaml">YAML</a>
+      <a href="airstrip.json">Manifest file</a>
       <pre style="whitespace: pre;">
       {PUKE-LIST}
       </pre>
@@ -107,12 +103,12 @@
 
   <!-- Prompt IE < 6 users to install Chrome Frame directly. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 6 ]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+  <!--[if lt IE 7 ]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
     <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
   <![endif]-->
 
-  <script src="lib/frameworks/jquery/jquery-1.8-min.js"></script>
-  <script src="lib/frameworks/bootstrap/bootstrap-stable-min.js"></script>
+  <script src="lib/frameworks/jquery/jquery-stable-min.js"></script>
+  <script src="lib/frameworks/bootstrap/bootstrap.core-stable-min.js"></script>
 </body>
 </html>
