--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
     <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
   <![endif]-->
 
-  <script async="true" src="lib/frameworks/jquery/jquery-stable-min.js"></script>
-  <script async="true" src="lib/frameworks/bootstrap/bootstrap.core-stable-min.js"></script>
+  <script src="lib/frameworks/jquery/jquery-stable-min.js"></script>
+  <script async src="lib/frameworks/bootstrap/bootstrap.core-stable-min.js"></script>
 </body>
 </html>
