Typo and minor style tweak on index

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     @import url(lib/frameworks/bootstrap/stable/css/bootstrap.responsive-stable-min.css);
 
     body {
-      padding-top: 60px;
+      padding-top: 60px !important;
     }
 
     #very-outdated-browser, #outdated-browser, #unsupported-browser{
@@ -140,7 +140,7 @@
   </div>
 
 
-  <!-- Prompt IE < 6 users to install Chrome Frame directly. Remove this if you want to support IE 6.
+  <!-- Prompt IE <= 6 users to install Chrome Frame directly. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7 ]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
